# Dynamic-Chess-Board-Piece-Extraction

./: .dockerignore  .gitattributes  Board-Square-Extraction-2.ipynb  Board-Square-Extraction.ipynb  Dockerfile  Piece-Extraction.ipynb  README.md  Steps.txt  chess-model-rfdetr.pth  dynamic-chess-coordinates.csv  main.py  perspective_transformation.py  requirements-gpu.txt  requirements-rfdetr.txt  requirements.txt  rfdetr-inference-demo.ipynb  square_filling-step-by-step.ipynb  square_filling.py  step-by-step.ipynb
.ipynb_checkpoints/: perspective_transformation-step-by-step-checkpoint.ipynb
Blob-Model/: last.xml
Dephtai-chess/: Board-Square-Extraction.ipynb  Piece-Extraction.ipynb  Steps.txt  dynamic-chess-coordinates.csv
Dephtai-chess/Blob-Model/: last.json
cpp-version/: CMakeLists.txt  README.md
cpp-version/extracted-data/: board-square-positions-demo.csv  chessboard_analysis.txt
cpp-version/include/: chessboard_analyzer.h  config.h  display_squares_from_csv.h  fen_board_generator.h  find_biggest_contour.h  find_contours.h  find_valid_squares.h  image_processing.h  inverse_transform.h  perspective_transform.h  save_squares_to_csv.h
cpp-version/models/: chess-yolov5m.onnx  chess-yolov5m.pt
cpp-version/src/: chessboard_analyzer.cpp  config.cpp  display_squares_from_csv.cpp  fen_board_generator.cpp  find_biggest_contour.cpp  find_contours.cpp  find_valid_squares.cpp  image_processing.cpp  inverse_transform.cpp  main.cpp  perspective_transform.cpp  save_squares_to_csv.cpp
extracted-data/: board-square-positions-demo.csv  board-square-positions.csv
